--- a/store/templates/orders.html
+++ b/store/templates/orders.html
@@ -19,9 +19,11 @@
                 <th>Sno.</th>
                 <th>Image</th>
                 <th>Product</th>
+                <th>Date</th>
                 <th>Price</th>
                 <th>Quantity</th>
                 <th>Total</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
@@ -30,10 +32,15 @@
                 <td>{{forloop.counter}}</td>
                 <td><img style="height: 80px;" class="rounded-circle" src="{{order.product.image.url}}" alt=""></td>
                 <td>{{order.product.name}}</td>
+                <td>{{order.date}}</td>
                 <td>{{order.price|currency}}</td>
                 <td>{{order.quantity}}</td>
-                <td>{{order.quantity|multiply:order.price}}</td>
-                
+                <td>{{order.quantity|multiply:order.price|currency}}</td>
+                {% if order.status %}
+                <td><small class="badge badge-success">Complete</small></td>
+                {% else %}
+                <td><small class="badge badge-warning">Pending</small></td>
+                {% endif %}                
                
             </tr>
             {% endfor %}
